try to fix the website detail page title mispostion issue on mobile view

--- a/src/Screens/contact/contactPageStyle.scss
+++ b/src/Screens/contact/contactPageStyle.scss
@@ -225,7 +225,7 @@
 
 @media screen and (max-width: 600px) {
     .text-container {
-      width: 100% !important;
+      max-width: 100% !important;
       left: unset !important;
       bottom: 6vh !important;
       margin-left: 1rem;
@@ -259,6 +259,7 @@
 
 @media screen and (min-width: 601px) and (max-width: 1330px) {
   .text-container {
+    max-width: 100% !important;
     width: fit-content !important;
     bottom: 6vh !important;
     margin-right: 1rem;
